@@ -1,6 +1,6 @@
 // $Id$
 
-project(Administrator_Client_IDL2_Compile): taoidl3toidl2defaults {
+project(Administrator_Client_IDL2_Compile): taoidl3toidl2defaults, avoids_ccm_noevent {
   requires += dummy_label
   after += Messenger_idl_gen Messenger_Administrator_idl_gen
   // ensures that only idl3-to-idl2 processing is performed
@@ -19,7 +19,7 @@ project(Administrator_Client_IDL2_Compile): taoidl3toidl2defaults {
   }
 }
 
-project(Administrator_Client_IDL2): ccm_stub, valuetype {
+project(Administrator_Client_IDL2): ccm_stub, valuetype, avoids_ccm_noevent {
   requires += dummy_label
   after += Administrator_Client_IDL2_Compile
 
